Removed em font size from mobile search toggle button to make sure it's not shifts on settings font increases

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -13628,8 +13628,8 @@ a.second-level-link [class^="ca-gov-icon-"] {
 }
 
 .mobile-controls .ca-gov-icon-menu-toggle-open, .mobile-controls .ca-gov-icon-menu-toggle-closed {
-  padding-left: 1em;
-  padding-right: 1em;
+  padding-left: 16px;
+  padding-right: 16px;
   line-height: 44px;
 }
 
